<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FlashCards</string>

    <!-- main screen -->
    <string name="button_input">Input</string>
    <string name="button_learn">Learn</string>

    <!-- input screen -->
    <string name="recto">recto</string>
    <string name="verso">verso</string>
    <string name="button_save">Save</string>

    <!-- learn screen -->
    <string name="clue">clue</string>
    <string name="answer">answer</string>
    <string name="button_show_answer">Show answer</string>
    <string name="button_next_card">Next</string>

    <!-- backup & restore buttons -->
    <string name="button_backup">Backup</string>
    <string name="button_restore">Restore</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_input">Input</string>
    <string name="title_activity_save_card">Save Card</string>
    <string name="title_activity_learn">Learn</string>

</resources>
