<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

<EditText android:id="@+id/recto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/recto" />    

<EditText android:id="@+id/verso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/verso" />    

<Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="saveCard"
        android:text="@string/button_save" />

</LinearLayout>
